--- a/banner2.css
+++ b/banner2.css
@@ -1,9 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,400;0,500;1,500;1,700&family=Inter:wght@500&family=Poppins:ital@1&family=Roboto+Flex:opsz,wght@8..144,500&family=Roboto+Mono:ital,wght@1,500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Golos+Text&family=Open+Sans:ital@1&family=Roboto:ital,wght@1,300&display=swap");
 
-.banner.No2 > * {
+.banner.No2 > *:not(.checkContainer) {
   opacity: 0;
 }
+
 .banner.No2 .headerText {
   font-family: "Golos Text", sans-serif;
   font-size: 45px;
@@ -31,37 +32,89 @@
   grid-template-columns: auto auto;
   place-items: center;
 }
-.checkContainer .check {
+.checkContainer * {
+  /* opacity: 0; */
+}
+/* .checkContainer .check {
   position: relative;
   width: 20px;
   height: 40px;
   border-bottom: 9px solid rgb(68, 18, 126);
   border-right: 9px solid rgb(68, 18, 126);
   transform: rotate(45deg);
+  animation: check 4s forwards;
+} */
+.checkWrap {
+  position: relative;
+  transform: rotate(45deg);
+  /* animation: var(--animation); */
 }
-
-.check::before {
+.checkWrap::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 60%;
+  bottom: 140%;
+  background-color: rgba(255, 255, 255, 0.8);
+  transform: rotate(135deg) translateX(-110%);
+  animation: var(--animation);
+}
+.checkWrap::after {
   content: "";
   position: absolute;
   width: 200%;
-  height: 20%;
-  bottom: 100%;
-  left: 190%;
+  height: 60%;
+  bottom: 380%;
   background-color: rgba(255, 255, 255, 0.8);
-  transform: rotate(135deg);
+  transform: rotate(135deg) translateX(7%);
   animation: var(--animation);
 }
-.check::after {
+.check {
+  position: relative;
+  display: inline-block;
+  height: 12px;
+  width: 30px;
+  margin-right: 15px;
+  transform-origin: 0% 0%;
+  background-color: rgb(68, 18, 126);
+  animation: check 2s forwards;
+}
+.check.animate {
+  opacity: 1 !important;
+}
+@keyframes check {
+  0%,
+  20% {
+    transform: scaleX(0);
+  }
+  30% {
+    transform: scaleX(1);
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.check::before {
   content: "";
   position: absolute;
-  width: 320%;
-  height: 20%;
-  bottom: 100%;
-  left: 230%;
-  background-color: rgba(255, 255, 255, 0.8);
-  transform: rotate(135deg) translateX(5%);
-  animation: var(--animation);
+  bottom: 5px;
+  background-color: inherit;
+  right: 0;
+  width: 12px;
+  height: 50px;
+  transform-origin: 0% 100%;
+  animation: check-before 2s forwards;
 }
+@keyframes check-before {
+  0%,
+  30% {
+    transform: scaleY(0);
+  }
+  45% {
+    transform: scaleY(1);
+  }
+}
+
 .usb {
   position: relative;
   width: 30%;
@@ -162,7 +215,7 @@ p {
   }
   50% {
     opacity: 0.7;
-    font-size: 50px;
+    font-size: 48px;
   }
 
   100% {
@@ -176,7 +229,7 @@ p {
   }
   50% {
     opacity: 0.7;
-    transform: scale(1.2) rotate(-90deg);
+    transform: scale(1.1) rotate(-90deg);
   }
 
   100% {
