--- a/styles/banner1.css
+++ b/styles/banner1.css
@@ -3,6 +3,35 @@ body {
   display: grid;
   place-items: center;
 }
+.No0 .title {
+  font-family: "Golos Text", sans-serif;
+  width: fit-content;
+  font-size: 45px;
+  font-weight: 600;
+  margin-inline: auto;
+  color: white;
+  text-align: center;
+  margin-block:150px 0;
+}
+.registerButton {
+  display: block;
+  width: 45%;
+  height: 43px;
+  margin-inline: auto;
+  background-color: rgb(2, 190, 190);
+  border-radius: 20px;
+  border: 1px solid rgb(2, 124, 168);
+  transform: translate(-5%, 250%);
+  color: white;
+  font-family: "Golos Text", sans-serif;
+  font-size: 17px;
+  font-weight: 300;
+}
+
+.banner.No0 .registerButton:hover {
+  color: rgb(2, 138, 187);
+  background-color: transparent;
+}
 .banner.No1 * {
   font-family: "Golos Text", sans-serif;
   box-sizing: border-box;
@@ -98,14 +127,13 @@ body {
 
 .animateIn {
   animation: fadeIn 1s forwards;
-
 }
 @keyframes fadeIn {
   from {
     opacity: 0;
   }
   to {
-    opacity: 1 ;
+    opacity: 1;
   }
 }
 .animateOut {
