--- a/styles/banner2.css
+++ b/styles/banner2.css
@@ -194,6 +194,7 @@ p {
   font-size: 6px;
   font-family: "Golos Text", sans-serif;
   font-weight: 600;
+  white-space: nowrap;
   color: rebeccapurple;
 }
 .banner2AnimationUsb {
