--- a/styles/banner4.css
+++ b/styles/banner4.css
@@ -59,7 +59,7 @@
 .bannerCard .textContainer .usbText {
   font-size: 40px;
 }
-.usbText.two::before {
+.banner.No4 .usbText.two::before {
   content: "TM";
   position: absolute;
   left: 100%;
@@ -74,22 +74,9 @@
   font-weight: 600;
   color: rebeccapurple;
 }
-.registerButton {
-  display: block;
-  width: 45%;
-  height: 43px;
-  margin-inline: auto;
-  background-color: rgb(2, 190, 190);
-  border-radius: 20px;
-  border: 1px solid rgb(2, 124, 168);
-  transform: translate(-5%, 250%);
-  color: white;
-  font-family: "Golos Text", sans-serif;
-  font-size: 17px;
-  font-weight: 300;
-}
+
 .bannerCard.animateCard1 {
-  animation: card 0.5s forwards ease-in;
+  animation: card 0.25s forwards ease-in;
 }
 
 @keyframes card {
@@ -106,7 +93,7 @@
   } */
 }
 .bannerCard.animateCard2 {
-  animation: card2 0.5s forwards;
+  animation: card2 0.25s forwards;
 }
 @keyframes card2 {
   0% {
@@ -144,7 +131,7 @@
   background-color: rgb(240, 240, 240);
 }
 .secondPage.open {
-  animation: page-slide 0.9s forwards;
+  animation: page-slide 0.5s forwards;
 }
 @keyframes page-slide {
   from {
@@ -243,7 +230,7 @@
   transform: translateY(20%);
 }
 .braceletParagraph .text .textBar:first-child {
-  width: 20px;
+  width: 30px;
 }
 .braceletParagraph .text .textBar {
   width: 50%;
@@ -264,10 +251,10 @@
   opacity: 1;
   border-radius: 40%;
   width: 70px;
-  transform: translate(-130%,10%);
+  transform: translate(-130%, 10%);
   box-shadow: 0 -12px 0 0 rgb(86, 15, 153);
 }
 .No4:not(.No3) .braceletContainer .bracelet2 {
   box-shadow: 0 -12px 0 0 orange;
-  transform: translate(-130%,-60%);
+  transform: translate(-130%, -60%);
 }
