--- a/styles/banner2.css
+++ b/styles/banner2.css
@@ -16,6 +16,7 @@
   color: white;
   font-size: 28px;
   font-weight: 600;
+  line-height: 40px;
   margin-block-end: 0;
   transform: translateY(10%);
 }
